# k8s-configs

./: .gitignore  README.md  aqua.yaml  install_dep_packages.sh  pyproject.toml  requirements.txt
roles/k8s/tasks/: k0s.yaml
roles/k8s/vars/: main.yaml
