[project]
name = "k8s-configs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryuhei Yoshida", email = "yoshida.ryuhei0112@gmail.com" }
]
dependencies = [
    "kubernetes==11.0.0",
    "openshift==0.11.2",
    "jinja2==3.0.3",
    "jinja2-base64-filters==0.1.1",
    "ansible>=11.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/k8s_configs"]
